--- a/02-textos.html
+++ b/02-textos.html
@@ -35,7 +35,8 @@
     <h1>Formatação de textos</h1>
     <!--Tag <u> = Underline (sublinado) (NÃO USAR)-->
         <!--Tag <address> = endereço-->
-    <p> class="dir"História baseada em fatos reais.</p>
+    <p class="dir">História baseada em fatos reais.</p>
+
 
     <p>Orkutilson morava na <address>Rua Sobe e Desce,
     333</address>, e seu e-mail era 
@@ -104,8 +105,7 @@
             <code>&lt;blockquote&gt;</code> e <code>&lt;address&gt;</code>
         </p>
 
-        <p> class="dir"<em>Autur/; Desconhecido</em></p>
-
+    <p class="dir"><em>Autor: Desconhecido</em></p>
 
 </body>
 </html>
